# agent-forge

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: config.py  database.py  main.py
backend/models/: agent.py  notification.py  run.py
backend/routers/: agents.py  models.py  notifications.py  runs.py  settings.py
backend/services/: codegen.py  cost.py  explainer.py  model_registry.py  notifier.py  runner.py  scheduler.py
backend/templates/: agent_template.py.j2
backend/tools/: file_reader.py  registry.py  shell_command.py  web_search.py
data/: agent_forge.db-shm  agent_forge.db-wal
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts
frontend/src/components/AgentBuilder/: AgentBuilder.tsx
frontend/src/components/AgentList/: AgentList.tsx
frontend/src/components/CodeViewer/: CodeViewer.tsx
frontend/src/components/ModelSelector/: ModelSelector.tsx
frontend/src/components/NotificationManager/: NotificationManager.tsx
frontend/src/components/RunMonitor/: RunMonitor.tsx
frontend/src/pages/: AgentDetail.tsx  Dashboard.tsx  Settings.tsx
frontend/src/types/: index.ts
scripts/: auto-push.sh
